syntax = "proto3";

package messaging;

service MessagingService {
  rpc SendMessage (NewMessage) returns (Empty) {}
  rpc FindAll (FindAllRequest) returns (Messages) {}
}

message Empty {
}

message FindAllRequest {
  string user1Id = 1;
  string user2Id = 2;
}

message Messages {
  repeated Message messages = 1;
}

message Message {
  string text = 1;
  string senderId = 2;
  string receiverId = 3;
  string createdAt = 4;
}

message NewMessage {
  string text = 1;
  string senderId = 2;
  string receiverId = 3;
}